Removed .pyc files from git tracking

--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,4 @@ cleanrl/stack_cnn_out_frames/
 #!cleanrl/sam_track/benchmark_data
 #!cleanrl/sam_track/benchmark_fsam.qmd
 cleanrl/sam_track/assets/*.mp4
-.gitignore
+.gitignore*.pyc
