--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ cleanrl/stack_cnn_out_frames/
 #!cleanrl/sam_track/benchmark_data
 #!cleanrl/sam_track/benchmark_fsam.qmd
 cleanrl/sam_track/assets/*.mp4
+cleanrl/batch_training/*.png
 .gitignore*.pyc
 *.mp4
 cleanrl/benchmark_object_detection/images
