Fixed saving of evaluation results inside container, modified general training script to handle different games

--- a/.dockerignore
+++ b/.dockerignore
@@ -4,7 +4,7 @@ metadrive/
 wandb/
 
 cleanrl/eval/
-cleanrl/models/agents/
+cleanrl/models/CNN/
 cleanrl/ppo_continuous_action_isaacgym/
 cleanrl/runs/
 cleanrl/ppoeql_ocatari_videos/
