--- a/docker/Dockerfile.eval
+++ b/docker/Dockerfile.eval
@@ -4,37 +4,15 @@ FROM ubuntu:24.04
 # Set non-interactive mode for apt to avoid prompts
 ENV DEBIAN_FRONTEND=noninteractive
 
-# Install necessary dependencies
-RUN apt-get update && apt-get install -y \
-    wget \
-    git \
-    ffmpeg \
-    libsm6 \
-    libxext6 \
-    libgl1 \
-    && rm -rf /var/lib/apt/lists/*
+ENV TZ=Europe/Berlin
+RUN apt-get update && apt-get install -y --no-install-recommends python3-pip python3-venv python3-tk git
+RUN python3 -m venv .venv
+ENV PATH="/.venv/bin:$PATH"
 
-# Install Miniconda
-RUN wget -O /tmp/miniconda.sh https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh && \
-    bash /tmp/miniconda.sh -b -p /opt/conda && \
-    rm /tmp/miniconda.sh
-
-# Set Conda in PATH
-ENV PATH="/opt/conda/bin:$PATH"
-
-# Create and activate the Conda environment
-RUN conda create -n insight_core python=3.9 -y
-
-# Activate the environment and set it as default
-ENV CONDA_DEFAULT_ENV=insight_core
-ENV PATH="/opt/conda/envs/insight_core/bin:$PATH"
-
-# install opencv from source
-RUN conda install -c conda-forge opencv -y
-
-# Upgrade pip and install pip dependencies from requirements.txt
 COPY requirements.txt requirements.txt
-RUN pip install --upgrade pip && pip install -r requirements.txt
+RUN pip install -U pip
+RUN pip install -r requirements.txt
+RUN pip install opencv-python-headless
 
 # Copy all contents of the working directory (adjust for exceptions later if needed)
 COPY . .
